Docu+library update
Arreglado documentación y añadido parametros a library para la nueva
implementacion
